--- a/docs/UML/classes/callback_notification.adoc
+++ b/docs/UML/classes/callback_notification.adoc
@@ -9,7 +9,7 @@ h|*Description*
 2+a|Event generated on receipt of notification of completion of a Dispatchable Task.
 
 h|*Inherit*
-2+|`NON_DETERMINISTIC_EVENT`
+2+|`PLAN_EVENT`
 
 h|*Attributes*
 ^h|*Signature*
